Adequação para o java 8 e modificações do código